# mach2

./: .gitmodules  Cargo.toml  README.md
src/: main.rs
src/bitcoin/: address.rs  bits.rs  blocks.rs  mod.rs  signer.rs  wallet.rs
src/bitcoin/ops/: mod.rs  pegin.rs  tests.rs  transfer.rs
src/bitcoin/rpc/: mod.rs  rpc_transport.rs  tests.rs
src/cli/: bitcoin.rs  crypto.rs  mod.rs  pegin.rs  stackerdb.rs
src/contracts/: bitcoin.clar  check-mach2.sh  mach2.clar  mod.rs  outcomes.clar  segwit.clar  witness.clar
src/contracts/tests/: check_utxo_exists_and_is_claimable.rs  decode_wtx.rs  inner_add_contract_transfer_outcome.rs  inner_complete_transfer.rs  inner_create_contract_transfer_outcome.rs  inner_register_pegin.rs  inner_register_pegin_utxo.rs  mod.rs  parse_and_store_wtx.rs  pegin.rs
src/core/: config.rs  globals.rs  mod.rs
src/devnet/: db.rs  mod.rs  pegin.rs  pox.rs  sip018.rs  tx.rs
src/events/: mod.rs
src/net/: codec.rs  http.rs  mod.rs  session.rs  stackerdb.rs
src/net/tests/: mod.rs
src/storage/: dag.rs  mod.rs  stackerdb.rs  tests.rs
src/storage/mock/: mod.rs
src/storage/mock/tests/: mod.rs
src/tests/: mod.rs
src/tx/: auth.rs  mod.rs  string.rs  transaction.rs
src/util/: log.rs  mod.rs  sqlite.rs  string.rs  tx.rs  vm.rs
src/vm/: clarity_vm.rs  mod.rs  special.rs
src/vm/contracts/: m2-ll.clar  m2.clar  mod.rs
src/vm/storage/: db.rs  headers.rs  mod.rs  util.rs
src/vm/tests/: mod.rs
util/: check-contracts.sh
