[package]
name = "mach2"
version = "0.1.0"
edition = "2021"

[dependencies]
stacks-common = { path = "./stacks-core/stacks-common" }
libstackerdb = { path = "./stacks-core/libstackerdb" }

lazy_static = "1.4"
lzma-rs = "0.2.0"
rand = "0.8"
regex = "1.11.1"
serde = "1"
serde_derive = "1"
toml = "0.8.12"
url = "2.5.4"

[patch.crates-io]
stacker = { git = "https://github.com/jcnelson/stacker"}

[dependencies.bitcoin]
version = "0.32.7"
features = ["std", "secp-recovery", "base64", "serde", "rand", "bitcoinconsensus-std"]

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth"]

[dependencies.rusqlite]
version = "=0.31.0"
features = ["blob", "serde_json", "i128_blob", "bundled", "trace"]

[dependencies.clarity-types]
version = "0.0.1"
features = ["rusqlite", "developer-mode"]
path = "./stacks-core/clarity-types"

[dependencies.clarity]
version = "0.0.1"
features = ["rusqlite", "developer-mode"]
path = "./stacks-core/clarity"

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(any(target_os="windows"))))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(any(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")), any(target_os="windows")))'.dependencies]
sha2 = { version = "0.10" }
